fixed blank bulletin page